# backend/docs/swagger.json
@@ -2172,13 +2172,6 @@
         "ent.MedicalCareEdges": {
             "type": "object",
             "properties": {
-                "medicalfiles": {
-                    "description": "Medicalfiles holds the value of the medicalfiles edge.",
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/ent.Medicalfile"
-                    }
-                },
                 "patients": {
                     "description": "Patients holds the value of the patients edge.",
                     "type": "array",
@@ -2224,11 +2217,6 @@
                     "description": "Dentist holds the value of the dentist edge.",
                     "type": "object",
                     "$ref": "#/definitions/ent.Dentist"
-                },
-                "medicalcare": {
-                    "description": "Medicalcare holds the value of the medicalcare edge.",
-                    "type": "object",
-                    "$ref": "#/definitions/ent.MedicalCare"
                 },
                 "nurse": {
                     "description": "Nurse holds the value of the nurse edge.",
