# backend/ent/schema/Medicalfile.go
@@ -25,7 +25,6 @@ func (Medicalfile) Edges() []ent.Edge {
    edge.From("dentist", Dentist.Type).Ref("medicalfiles").Unique(),
    edge.From("patient", Patient.Type).Ref("medicalfiles").Unique(),
    edge.From("nurse", Nurse.Type).Ref("medicalfiles").Unique(),
-   edge.From("medicalcare", MedicalCare.Type).Ref("medicalfiles").Unique(),
    edge.To("dentalexpenses", DentalExpense.Type).StorageKey(edge.Column("medicalfile_id")),
    }
 } 
